# ragpy

./: LICENSE  README.md  example.env  pyproject.toml
ragpy/: embeddings.py  rag_service.py
ragpy/vectorstore/: __init__.py  qdrant.py
