[project]
name = "ragpy"
version = "0.1.0"
description = "Unified RAG service abstraction for vector stores like Qdrant."
authors = [
    { name = "Ruslan Dev", email = "ruslandev@uzoo.ai" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"

# Base dependencies (minimal)
dependencies = [
    "numpy>=1.23",
    "openai>=2.6.1",
    "qdrant-client[fastembed]>=1.15.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
